# umap_tool

./: .gitignore  .gitmodules  README.md  process_handler.py  pyproject.toml  remove_vhacd_files.py  requirements.txt  test.py
configs/: llava.json  pointcloud.json  pointnet.json  ulip.json
docker/: Dockerfile  build-docker.sh  docker-compose.yml  run-docker.sh
tools/: analyze_models.py  convert_units.py  dispersion.py  download_objaverse-xl.py  fractal_dimension.py  spectral_matric.py
tools/entropy/: delentropy.py  glcm.py  shannon.py
tools/umap/: plot.py  plot_3d.py  plot_all.py  plot_all_1.py  plot_orig.py  test.py  train.py
tools/umap/3d_model/: config.py  feature_extractors.py  features_cli.py  interactive_umap_viewer.py  pipeline_3d.py  pipeline_test_plot.py  plot_3d.py  render_folder_thumbnails.py  render_obj.py  render_obj_four_views.py  render_obj_multi_views.py  show_model.py  test.py  test_3d.py  train_3d copy.py  train_3d.py
