[project]
name = "dataset-analyzer-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dash>=3.0.4",
    "easydict>=1.13",
    "keras>=3.6.0",
    "knn-cuda",
    "llava",
    "numba>=0.60.0",
    "numpy>=1.26.4",
    "objaverse>=0.1.7",
    "open-clip-torch>=3.0.0",
    "open3d>=0.19.0",
    "opencv-contrib-python>=4.10.0.84",
    "opencv-python>=4.10.0.84",
    "pandas>=2.3.0",
    "pointnet2-ops",
    "pynndescent>=0.5.13",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.5.2",
    "tbb>=2021.13.1",
    "tensorflow[gpu]>=2.18.1",
    "timm>=1.0.19",
    "torch==2.4.1",
    "torchvision>=0.19.1",
    "tqdm>=4.66.5",
    "trimesh>=4.6.12",
    "umap-learn>=0.5.6",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
pointnet2-ops = { path = "external/Pointnet2_PyTorch/pointnet2_ops_lib" }
knn-cuda = { url = "https://github.com/unlimblue/KNN_CUDA/releases/download/0.2/KNN_CUDA-0.2-py3-none-any.whl" }
llava = { path = "external/LLaVA", editable = true }
